managed/apps/tw/components/api/overlays/beta/patches/ingress-api.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: api
  namespace: tw
spec:
  tls:
  - hosts:
    - api.beta.twister.american-broomstick.com
    secretName: api-tls
  rules:
  - host: api.beta.twister.american-broomstick.com
    http:
      paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api-api-api
              port:
                number: 8080
